# research-mcp

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
data_sources/ngx/: client.py  constants.py  enriched.py  enriched_helpers.py  manifest.py  parser.py  pipeline.py  pipeline_main.py  pipeline_utils.py  processor.py  utils.py  validator.py
data_sources/ngx/data/: manifest.json  ngx_institutions.csv
mcp_local/: server.py  tools.py
scripts/: run_enriched_pipeline.py  run_ngx_pipeline.py  run_processor_pipeline.py
utils/: helpers.py  logger.py
